--- a/src/converter/converter.css
+++ b/src/converter/converter.css
@@ -1,13 +1,13 @@
 .Converter {
-  width: 100%;
+  width: 80%;
+  height: 80%;
+  justify-content: center;
   padding: 0 15%;
   box-sizing: border-box;
 }
 .Form {
-  display: flex;
-  margin: 0 auto;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
 }
@@ -24,6 +24,8 @@ select {
   background: maroon;
   color: white;
   border: none;
+  height: 20px;
+  line-height: 0.3rem;
 }
 .Converter h3 {
   background-color: #ccc;
@@ -33,4 +35,12 @@ select {
 }
 .Converter h2 span {
   color: maroon;
+}
+.row {
+  border: 1px solid maroon;
+  border-radius: 4px;
+  margin: 10px;
+  width: 90%;
+  justify-content: center;
+  height: 30px;
 }
