--- a/src/converter/converter.css
+++ b/src/converter/converter.css
@@ -1,6 +1,6 @@
 .Converter {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   padding: 0 15%;
   box-sizing: border-box;
@@ -10,6 +10,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
+  background-color: #d3d3d3;
 }
 .Form input,
 select {
@@ -37,7 +38,7 @@ select {
   color: maroon;
 }
 .row {
-  border: 1px solid maroon;
+  border: 1px solid #808080;
   border-radius: 4px;
   margin: 10px;
   width: 90%;
